# WormieCorp-_-aer

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  LICENSE.txt  README.md
.build/: license-header.txt
.github/workflows/: build.yml  clean.yml  linting.yml
aer/: Cargo.toml
aer/src/: lib.rs  logging.rs  main.rs
aer/test-data/: checksum-test.bin.txt
aer/tests/: aer-ver.rs  aer-web.rs
aer_data/: Cargo.toml
aer_data/src/: defaults.rs  lib.rs  metadata.rs  prelude.rs  updater.rs
aer_data/src/metadata/: chocolatey.rs
aer_data/src/updater/: chocolatey.rs
aer_license/: Cargo.toml
aer_license/src/: lib.rs
aer_upd/: Cargo.toml
aer_upd/src/: lib.rs  parsers.rs  runners.rs
aer_upd/src/parsers/: errors.rs  toml.rs
aer_upd/src/runners/: powershell.rs  wrapper.ps1
aer_upd/test-data/: license-expression.toml  license-long.aer.toml  license-short.toml  license-url.toml
aer_upd/test-data/ps1/: change-license-expression.ps1  change-license-full.ps1  change-license-url.ps1  change-project_url.ps1  change-summary.ps1  exit-code.ps1
aer_version/: Cargo.toml
aer_version/examples/: chocolatey.rs
aer_version/src/: lib.rs  versions.rs
aer_version/src/versions/: chocolatey.rs
aer_web/: Cargo.toml
aer_web/src/: elements.rs  errors.rs  lib.rs  request.rs
aer_web/src/response/: html.rs
pkg-data/: Cargo.toml
pkg-data/src/: defaults.rs  lib.rs  metadata.rs  prelude.rs  updater.rs
pkg-data/src/metadata/: chocolatey.rs
pkg-data/src/updater/: chocolatey.rs
pkg-license/: Cargo.toml
pkg-license/src/: lib.rs
pkg-upd/: Cargo.toml
pkg-upd/src/: lib.rs  logging.rs  main.rs  package.rs  parsers.rs  runners.rs
pkg-upd/src/package/: metadata.rs
pkg-upd/src/parsers/: errors.rs  toml.rs
pkg-upd/src/runners/: powershell.rs
pkg-upd/test-data/: basic-metadata.toml  deserialize-full.pkg.toml  deserialize-full.toml  license-long.toml  license-short.toml  license-url.toml  metadata-choco.toml
pkg-upd/test-data/ps1/: change-identifier.ps1  change-project_url.ps1  empty-run-with-data.ps1  invalid-powershell.ps1  with-exception.ps1
pkg-upd/tests/: pkg-web.rs
pkg-version/: Cargo.toml
pkg-version/examples/: chocolatey.rs
pkg-version/src/: lib.rs  versions.rs
pkg-version/src/versions/: chocolatey.rs
pkg-web/: Cargo.toml
pkg-web/src/: elements.rs  lib.rs  request.rs  response.rs
pkg-web/src/response/: html.rs
pkg_web/: Cargo.toml
pkg_web/src/: elements.rs  errors.rs  lib.rs  request.rs  response.rs
pkg_web/src/response/: binary.rs  html.rs
src/: lib.rs  main.rs  package.rs  parsers.rs
src/package/: chocolatey.rs  metadata.rs
src/parsers/: toml.rs
