[package]
name = "aer"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

[features]
default = ["human"]
human = ["human-panic", "human_bytes"]

[[bin]]
name = "aer-ver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aer_upd = { path = "../aer_upd" }
chrono = "0.4.19"
fern = "0.7.0"
human-panic = { git = "https://github.com/WormieCorp/human-panic", branch = "additional-info", optional = true }
human_bytes = { version = "0.3.0", optional = true }
lazy_static = "1.4.0"
log = "0.4.14"
md-5 = "0.9.1"
regex = "1.5.4"
sha-1 = "0.9.6"
sha2 = "0.9.5"
structopt = { version = "0.3.21", features = ["wrap_help"] }
yansi = "0.5.0"

[dev-dependencies]
assert_cmd = "1.0.4"
predicates = "1.0.8"
rstest = "0.10.0"
rusty-hook = "0.11.2"
