[package]
name = "aer_data"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chocolatey"]
chocolatey = ["aer_version/chocolatey"]
serialize = ["aer_license/serialize", "aer_version/serialize", "serde", "url/serde"]

[dependencies]
aer_license = { path = "../aer_license", default-features = false }
aer_version = { path = "../aer_version", default-features = false }
serde = { version = "1.0.125", optional = true }
url = "2.2.1"
whoami = "1.1.1"

[dev-dependencies]
rstest = "0.7.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
