[package]
name = "aer_version"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chocolatey"]
serialize = ["semver/serde", "serde"]
chocolatey = ["chrono", "num"]

[dependencies]
chrono = { version = "0.4.19", optional = true }
num = { version = "0.4.0", optional = true }
semver = "0.11.0"
serde = { version = "1.0.125", optional = true }

[dev-dependencies]
rstest = "0.7.0"

[[example]]
name = "chocolatey"
required-features = ["chocolatey"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
