[package]
name = "pkg-upd"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"
description = "Utility to update packages"
readme = "README.md"
repository = "https://github.com/WormieCorp/pkg-upd"
license = "MIT"
keywords = ["cli", "package", "packaging", "updater"]
categories = ["command-line-utilities"]
publish = false

[features]
default = ["powershell", "toml_data"]
toml_data = ["toml", "serde"]
powershell = ["serde_json", "serde"]

[dependencies]
chrono = "0.4.19"
fern = { version = "0.6.0", features = ["date-based"] }
human-panic = { git = "https://github.com/WormieCorp/human-panic", branch = "additional-info" }
lazy_static = "1.4.0"
log = "0.4.14"
pkg-data = { path = "../pkg-data" }
pkg-license = { path = "../pkg-license" }
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.124", optional = true }
serde_json = { version = "1.0.64", optional = true }
toml = { version = "0.5.8", optional = true }
url = { version = "2.2.1", features = ["serde"] }
whoami = "1.1.0"
yansi = "0.5.0"

[dev-dependencies]
rstest = "0.6.4"
rusty-hook = "0.11.2"
