[package]
name = "pkg-version"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["semver/serde", "serde"]

[dependencies]
chrono = "0.4.19"
num = "0.4.0"
semver = "0.11.0"
serde = { version = "1.0.125", optional = true }

[dev-dependencies]
rstest = "0.7.0"
